--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+#server.port = 8588
 
+
+# Configuración de MongoDB Local
+#spring.data.mongodb.database=hackathonDB
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+
+# App Properties
+bezkoder.app.jwtSecret= bezKoderSecretKey
+bezkoder.app.jwtExpirationMs= 3600000
+bezkoder.app.jwtRefreshExpirationMs= 86400000
+
+## For test
+bezkoder.app.jwtExpirationMs= 60000
+bezkoder.app.jwtRefreshExpirationMs= 120000
