--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 
 
 # Configuración de MongoDB Local
-#spring.data.mongodb.database=hackathonDB
-#spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
+spring.data.mongodb.database=hackathonDB
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
 
 # App Properties
 bezkoder.app.jwtSecret= bezKoderSecretKey
