--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,10 @@ dependencies {
 	implementation "org.glassfish.jaxb:jaxb-runtime:2.3.2"
 	// https://mvnrepository.com/artifact/javax.validation/validation-api
 	implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+	// https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk
+	implementation group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.12.72'
+	// https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore
+	implementation group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.14'
 }
 
 test {
